fix(full): get category from depth api and refactor category tree module
